@@ -1,3 +1,8 @@
+2008-03-11  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/action.rb, lib/gluon/builder.rb, lib/gluon/po.rb,
+	lib/gluon/rs.rb: page cache.
+
 2008-03-06  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/renderer.rb: compile view.
